--- a/_posts/2020-01-27-lame.markdown
+++ b/_posts/2020-01-27-lame.markdown
@@ -1,5 +1,7 @@
+---
 layout: post
-title:  "1!!!"
+title:  "Lame - Hack The Box"
 date:   2020-01-27 12:23:50 +0200
-categories: jekyll update
+categories: htb
+permalink: "/lame"
 ---
