--- a/_posts/2019-01-28-lame.markdown
+++ b/_posts/2019-01-28-lame.markdown
@@ -11,7 +11,9 @@ Enables us to hack right into the box as a root.
 
 ### RECONNAISSANCE
 Starting this step with running Nmap
-```
+
+```javascript
+
 nmap -sC -sV 10.10.10.3
+
 ```
- 
